# mdslide

./: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
.github/workflows/: deploy-mac-dmg.yaml  deploy-windows-msix.yaml
docs/superpowers/plans/: 2026-07-15-slide-export.md
docs/superpowers/specs/: 2026-07-15-slide-export-design.md
scripts/: check-plugin.js
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: interface.ts
src/lib/components/part/: ContextMenu.svelte  EditorArea.svelte  EditorToolbar.svelte  FileDialogs.svelte  FileTree.svelte  PreviewPane.svelte  Sidebar.svelte  SlideshowMode.svelte
src/lib/components/screen/: tauri.svelte
src/lib/components/ui/input/: input.svelte
src/lib/services/: configService.ts  exportService.ts  fileService.ts  markdownService.ts  utils.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/test-export/: +page.svelte
